# Page_Analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: CI.yml
page_analyzer/: __init__.py  business_logic.py  database.py  page_analyzer.py  pyproject.toml  url_repository.py  url_service.py  url_services.py
page_analyzer/page_analyzer/: __init__.py  page_analyzer.py
page_analyzer/page_analyzer/templates/: footer.html  header.html  index.html  show_url.html
page_analyzer/templates/: 404.html  footer.html  index.html  show_url.html  urls.html
tests/: test_app.py  test_repo.py
